--- a/style.css
+++ b/style.css
@@ -78,9 +78,11 @@ body{
 @media screen and (max-width: 320px) {
     .app{
         margin: 20px auto;
+        background: linear-gradient(rgb(106, 29, 106), rgb(34, 230, 230));
     }
     .btn{
         padding: 7px;
         margin: 5px 0;
+        background: linear-gradient(rgb(106, 29, 106), rgb(34, 230, 230));
     }
 }
